// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component Modal renders closed 1`] = `<div />`;

exports[`Modal Component Modal renders handles click outside 1`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-sm"
      >
        <div
          id="CHILD1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders handles close icon 1`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-lg"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            MODALTITLE
          </div>
          <div
            class="modal-close-icon"
            data-testid="TESTID"
          >
            <i
              class="icon"
              icon="fal,times"
            />
          </div>
        </div>
        <div
          id="CHILD1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders handles press escape 1`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-sm"
      >
        <div
          id="CHILD1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders handles tabbing 1`] = `<div />`;

exports[`Modal Component Modal renders handles tabbing 2`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-lg"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            MODALTITLE
          </div>
          <div
            class="modal-close-icon"
            data-testid="TESTID"
          >
            <i
              class="icon"
              icon="fal,times"
            />
          </div>
        </div>
        <input
          data-testid="INPUT"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders handles tabbing 3`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-lg"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            MODALTITLE
          </div>
          <div
            class="modal-close-icon"
            data-testid="TESTID"
          >
            <i
              class="icon"
              icon="fal,times"
            />
          </div>
        </div>
        <input
          data-testid="INPUT"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders open 1`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-sm"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            MODALTITLE
          </div>
        </div>
        <div
          id="CHILD1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders shakes when click outside when it is not allowed 1`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-sm"
      >
        <div
          id="CHILD1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders shakes when click outside when it is not allowed 2`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-sm shake"
      >
        <div
          id="CHILD1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders shakes when press escape when it is not allowed 1`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-sm"
      >
        <div
          id="CHILD1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders shakes when press escape when it is not allowed 2`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-sm shake"
      >
        <div
          id="CHILD1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders shakes when press escape when it is not allowed 3`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-sm"
      >
        <div
          id="CHILD1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders transition from open to close 1`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-sm"
      >
        <div
          id="CHILD1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component Modal renders transition from open to close 2`] = `<div />`;
